--- a/src/components/PersonDetails/PersonDetails.sass
+++ b/src/components/PersonDetails/PersonDetails.sass
@@ -1,2 +1,14 @@
 .im-person
 	border-radius: 15px
+
+.person-details
+	width: 30rem
+	background-color: #373737
+	border-radius: 15px
+	padding-top: 2rem
+	padding-bottom: 2rem
+	padding-left: 1.5rem
+	padding-right: 1rem
+
+.person-prop-item
+	padding: 0.3rem 1rem
