--- a/src/components/RandomPlanet/RandomPlanet.sass
+++ b/src/components/RandomPlanet/RandomPlanet.sass
@@ -3,6 +3,7 @@
 	border-radius: 15px
 
 .slider
+	width: 50rem
 	margin-top: 2rem
 	background-color: #373737
 	padding-top: 2rem
@@ -13,3 +14,6 @@
 
 .planet-props
 	padding-top: 1.5rem
+
+.planet-prop-item
+	padding: 0.3rem 1rem
