--- a/src/App/App.sass
+++ b/src/App/App.sass
@@ -3,5 +3,10 @@
 	padding-right: 0
 
 .body-app
-	padding-top: 2rem
 	padding-bottom: 2rem
+
+.btns-app
+	margin-top: 1rem
+	margin-bottom: 1rem
+	margin-right: 1rem
+
