--- a/src/components/RandomPlanet/RandomPlanet.sass
+++ b/src/components/RandomPlanet/RandomPlanet.sass
@@ -5,6 +5,7 @@
 .slider
 	width: 50rem
 	margin-top: 2rem
+	margin-bottom: 2rem
 	background-color: #373737
 	padding-top: 2rem
 	padding-bottom: 2rem
