Added content to MainPage

--- a/src/components/Pages/Pages.sass
+++ b/src/components/Pages/Pages.sass
@@ -1,6 +1,12 @@
-.main-page
+.page-container
     display: flex
     justify-content: center
+
+.main-page
+    display: flex
+    align-items: center
+    justify-content: center
+    flex-direction: column
     height: 300px
     border-radius: 15px
     width: 50rem
